<?xml version="1.0"?>
<package format="2">
  <name>gazebo_basics_tutorial</name>
  <version>0.0.1</version>
  <description>The gazebo_basics_tutorial package</description>
  <maintainer email="olaya@todo.todo">olaya</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amr_urdf_sim_tutorial</exec_depend>
  <exec_depend>amr_urdf_tutorial</exec_depend>
  <export><metapackage/></export>
</package>
